feat: Add complete multi-destination streaming MVP
✨ New Features:
- Multi-destination streaming to YouTube/X/LinkedIn/Custom RTMP
- Dedicated streaming control interface (streaming.html)
- Real-time destination management and monitoring
- Platform-optimized encoding presets
- DynamoDB integration for persistent storage
- Enhanced backend API with streaming endpoints

🔧 Technical Improvements:
- Node.js 22.x compatibility (AWS Lambda ready until April 2027)
- Extended backend server with multi-destination APIs
- Comprehensive documentation and setup guides
- Production deployment scripts and CloudFormation templates

📋 Working MVP Components:
- ✅ Local development environment fully functional
- ✅ 3 configured YouTube destinations with encrypted stream keys
- ✅ 4 platform-optimized encoding presets
- ✅ Complete streaming control interface
- ✅ Real-time status monitoring and session tracking

🎯 Preserves Original:
- Single HLS player functionality intact on main branch
- AWS Media Services integration unchanged
- Existing dashboard and monitoring features preserved

🧪 Testing Status:
- ✅ Backend API: All endpoints functional (localhost:3000)
- ✅ Frontend: Streaming interface working (localhost:8082)
- ✅ Database: DynamoDB tables with test data
- ✅ Integration: Complete end-to-end functionality verified

Ready for production deployment branch creation.

--- a/dashboard.html
+++ b/dashboard.html
@@ -19,6 +19,30 @@
             </div>
         </header>
 
+        <!-- Streaming Control Link -->
+        <section class="streaming-control-link">
+            <div class="link-card">
+                <div class="link-icon">🎯</div>
+                <div class="link-content">
+                    <h2>Multi-Destination Streaming</h2>
+                    <p>Manage and control streaming to multiple platforms simultaneously</p>
+                    <a href="streaming.html" class="btn-primary btn-large">
+                        🚀 Open Streaming Control
+                    </a>
+                </div>
+                <div class="link-stats">
+                    <div class="stat-item">
+                        <span class="stat-label">Destinations:</span>
+                        <span id="quick-destinations-count" class="stat-value">0</span>
+                    </div>
+                    <div class="stat-item">
+                        <span class="stat-label">Status:</span>
+                        <span id="quick-streaming-status" class="stat-value">Idle</span>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- Status Overview -->
         <section class="status-overview">
             <h2>Service Status Overview</h2>
