Partially working API with AWS SDK added
- Fixed Lambda function deployment by adding AWS SDK v2 dependencies
- Restored working backend/index.js with proper Node.js 22.x compatibility
- Added package.json and node_modules for Lambda deployment
- Updated medialive-implementation-prompt.md with critical deployment warnings
- Documented errors made during deployment and recovery process
- API endpoints now working: /health, /destinations, /streaming/status
- Environment variables restored to correct table names
- Lambda Function URL: https://hi2pfpdbrlcry5w73wt27xrniu0vhykl.lambda-url.us-west-2.on.aws/api

WARNING: Do not modify working Lambda functions without proper dependency testing

--- a/streaming.html
+++ b/streaming.html
@@ -32,6 +32,13 @@
         <!-- Quick Status Bar -->
         <section class="quick-status">
             <div class="status-item">
+                <span class="status-label">MediaLive Channel:</span>
+                <span id="medialive-status" class="status-value channel-status" data-state="unknown">
+                    <span class="channel-indicator"></span>
+                    <span class="channel-text">Loading...</span>
+                </span>
+            </div>
+            <div class="status-item">
                 <span class="status-label">Destinations:</span>
                 <span id="destinations-count" class="status-value">0</span>
             </div>
