Implement MediaConnect dual source failover monitoring and GUI integration
✅ Backend Enhancements:
- Enhanced source health detection using PeerIpAddress field for accurate connection status
- Updated getInputHealthMonitoring() to properly handle connected/disconnected states
- Fixed case sensitivity issue (ACTIVE vs active) in flow status checking
- Added comprehensive source information including protocol, IPs, ports, and descriptions
- Improved getAllSources() and getFailoverStatus() methods with consistent health checking

✅ Frontend Integration:
- Updated source health display to show proper connection indicators (🔴/🟢)
- Enhanced source naming with Primary/Backup indicators
- Improved failover status display showing mode (Enabled (FAILOVER))
- Fixed updateSourceDisplay() to handle 'connected'/'disconnected' status correctly
- Added IP:port display in bandwidth field for better source identification

✅ API Endpoints Working:
- /api/mediaconnect/sources/health - Real-time dual source health monitoring
- /api/mediaconnect/sources - Complete source listing with failover config
- /api/mediaconnect/failover/status - Detailed failover status and configuration

✅ Current Status:
- MediaConnect flow: Active with dual SRT sources (ports 9998/9999)
- Both sources showing disconnected (awaiting Videon Edge node connections)
- Failover: Enabled with FAILOVER mode, primary source configured
- Real-time monitoring with 5-second refresh intervals
- Interactive failover controls ready for testing

Frontend: https://d35au6zpsr51nc.cloudfront.net/streaming.html
Backend: https://rdmgtdz2eu4pj43igkvh6fvaly0xovke.lambda-url.us-west-2.on.aws

--- a/streaming.html
+++ b/streaming.html
@@ -83,10 +83,25 @@
                         </div>
                     </div>
 
-                    <!-- Failover Status -->
-                    <div class="failover-status" id="failover-status">
-                        <span class="failover-label">🔄 Failover:</span>
-                        <span class="failover-state" id="failover-state">Disabled</span>
+                    <!-- Failover Status and Controls -->
+                    <div class="failover-section">
+                        <div class="failover-status" id="failover-status">
+                            <span class="failover-label">🔄 Failover:</span>
+                            <span class="failover-state" id="failover-state">Disabled</span>
+                        </div>
+
+                        <!-- Failover Controls -->
+                        <div class="failover-controls" id="failover-controls" style="display: none;">
+                            <button id="add-backup-btn" class="btn-small btn-secondary">
+                                ➕ Add Backup
+                            </button>
+                            <button id="enable-failover-btn" class="btn-small btn-primary">
+                                🔄 Enable Failover
+                            </button>
+                            <button id="test-failover-btn" class="btn-small btn-warning" style="display: none;">
+                                🧪 Test Failover
+                            </button>
+                        </div>
                     </div>
                 </div>
 
