Improve MediaConnect source health styling and readability
✅ Visual Improvements:
- Changed text color from light grey to black for better readability
- Updated vertical border from green to red for disconnected sources
- Added dynamic border color (red for disconnected, green for connected)
- Moved status indicators and added 'Disconnected'/'Connected' text labels

✅ HTML Structure Updates:
- Reorganized source item layout with proper header and details sections
- Added source-status-indicator container for better alignment
- Added source-status-text elements for clear status display

✅ CSS Enhancements:
- Updated all text colors to #000000 (black) for maximum readability
- Added .source-item.connected class for dynamic styling
- Improved source-status-indicator layout with flexbox
- Removed duplicate CSS sections for cleaner code
- Enhanced source-details and source-endpoint styling

✅ JavaScript Updates:
- Updated updateSourceDisplay() to handle new HTML structure
- Added dynamic CSS class management for connection status
- Enhanced status text updates (Connected/Disconnected)
- Improved source item styling based on connection state

The source health section now clearly shows:
- Black text for excellent readability
- Red borders for disconnected sources
- Clear 'Disconnected' status labels
- Better organized layout with proper visual hierarchy

--- a/streaming.html
+++ b/streaming.html
@@ -60,25 +60,35 @@
                     <div class="sources-container">
                         <!-- Primary Source -->
                         <div class="source-item" id="primary-source">
-                            <div class="source-status">
-                                <span class="source-indicator" id="primary-source-indicator">🔴</span>
-                                <span class="source-name" id="primary-source-name">Source 1</span>
+                            <div class="source-header">
+                                <div class="source-status">
+                                    <span class="source-name" id="primary-source-name">Source 1</span>
+                                    <span class="source-protocol" id="primary-source-protocol">SRT</span>
+                                </div>
                             </div>
-                            <div class="source-metrics">
-                                <span class="source-bandwidth" id="primary-source-bandwidth">0 Mbps</span>
-                                <span class="source-protocol" id="primary-source-protocol">SRT</span>
+                            <div class="source-details">
+                                <span class="source-endpoint" id="primary-source-bandwidth">0 Mbps</span>
+                                <div class="source-status-indicator">
+                                    <span class="source-indicator" id="primary-source-indicator">🔴</span>
+                                    <span class="source-status-text" id="primary-source-status">Disconnected</span>
+                                </div>
                             </div>
                         </div>
 
                         <!-- Secondary Source (for failover) -->
                         <div class="source-item" id="secondary-source" style="display: none;">
-                            <div class="source-status">
-                                <span class="source-indicator" id="secondary-source-indicator">🔴</span>
-                                <span class="source-name" id="secondary-source-name">Source 2</span>
+                            <div class="source-header">
+                                <div class="source-status">
+                                    <span class="source-name" id="secondary-source-name">Source 2</span>
+                                    <span class="source-protocol" id="secondary-source-protocol">SRT</span>
+                                </div>
                             </div>
-                            <div class="source-metrics">
-                                <span class="source-bandwidth" id="secondary-source-bandwidth">0 Mbps</span>
-                                <span class="source-protocol" id="secondary-source-protocol">SRT</span>
+                            <div class="source-details">
+                                <span class="source-endpoint" id="secondary-source-bandwidth">0 Mbps</span>
+                                <div class="source-status-indicator">
+                                    <span class="source-indicator" id="secondary-source-indicator">🔴</span>
+                                    <span class="source-status-text" id="secondary-source-status">Disconnected</span>
+                                </div>
                             </div>
                         </div>
                     </div>
